--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask==2.3.3
-google-auth==2.23.3
-google-api-python-client==2.103.0
+Flask==2.3.3
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
-apscheduler==3.10.4
-python-dotenv==1.0.0
-spacy>=3.6.0
+google-api-python-client==2.108.0
 Pillow==10.0.1
 requests==2.31.0
+APScheduler==3.10.4
+selenium==4.15.0
+webdriver-manager==4.0.1
+playwright==1.40.0
+python-dotenv==1.0.0
