--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,5 @@ google-api-python-client==2.108.0
 Pillow==10.0.1
 requests==2.31.0
 APScheduler==3.10.4
-selenium==4.15.0
-webdriver-manager==4.0.1
-playwright==1.40.0
+# Web automation dependencies removed - using push notifications instead
 python-dotenv==1.0.0
