--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-Flask==2.3.3
+# Core dependencies
+Flask==3.0.0
+google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
-Pillow==10.0.1
 requests==2.31.0
-APScheduler==3.10.4
-# Web automation dependencies removed - using push notifications instead
 python-dotenv==1.0.0
+APScheduler==3.10.4
+
+# NLP and ML dependencies
+transformers==4.35.2
+torch==2.1.1
+sentence-transformers==2.2.2
+scikit-learn==1.3.2
+python-dateutil==2.8.2
+pyspellchecker==0.8.3
+
+# Image processing
+Pillow==10.1.0
