--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-# Environment variables and secrets
-.env
-.env.local
-.env.production
-.env.staging
-
-# Google credentials and tokens
-credentials.json
-client_secrets.json
-token.json
-*.pem
-*.key
-
 # Database files
 *.db
 *.sqlite
@@ -24,30 +11,36 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual environments
-venv/
 env/
+venv/
 ENV/
 env.bak/
 venv.bak/
 sms_venv/
+
+# Environment variables and secrets
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.key
+*.pem
+*.p12
+*.pfx
+
+# Google API credentials
+client_secrets.json
+credentials.json
+token.json
+service_account.json
+
+# Logs
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # IDE and editor files
 .vscode/
@@ -55,19 +48,8 @@ sms_venv/
 *.swp
 *.swo
 *~
-
-# OS generated files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-
-# Logs
-*.log
-logs/
 
 # Temporary files
 *.tmp
@@ -81,6 +63,9 @@ data/*.json
 !data/wu_foods.json
 !data/snacks.json
 !data/common_sayings.json
+
+# Keep CSV files for data analysis
+data/*.csv
 
 # Configuration files (keep templates, ignore actual configs)
 config/client_secrets.json
