--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,11 @@ services:
   - type: web
     name: alfred-the-butler
     env: python
-    buildCommand: pip install -r config/requirements.txt
+    buildCommand: pip install -r requirements-cloud.txt
     startCommand: cd src && python app.py
     envVars:
       - key: PYTHON_VERSION
-        value: 3.12.0
+        value: 3.11.0
       - key: PORT
         value: 5001
     healthCheckPath: /health
