--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,18 @@ google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 google-api-core==2.11.1
 googleapis-common-protos==1.61.0
-Pillow==10.1.0
+Pillow>=9.5.0,<10.0.0
 requests==2.31.0
 python-dotenv==1.0.0
 APScheduler==3.10.4
 python-dateutil==2.8.2
-transformers==4.35.2
-torch==2.1.1
-sentence-transformers==2.2.2
-scikit-learn==1.3.2
-pyspellchecker==0.8.3
-signalwire==2.5.0
+
+# NLP and ML dependencies (lighter versions for cloud)
+transformers>=4.30.0
+torch>=2.0.0
+sentence-transformers>=2.2.0
+scikit-learn>=1.3.0
+pyspellchecker>=0.7.0
+
+# SignalWire
+signalwire>=2.0.0
