--- a/requirements-cloud.txt
+++ b/requirements-cloud.txt
@@ -12,6 +12,14 @@ python-dotenv>=1.0.0
 APScheduler>=3.10.0
 python-dateutil>=2.8.0
 
+# ML/NLP dependencies (required for hugging_face_nlp.py)
+numpy>=1.24.0
+scikit-learn>=1.3.0
+transformers>=4.30.0
+torch>=2.0.0
+sentence-transformers>=2.2.0
+pyspellchecker>=0.7.0
+
 # SignalWire
 signalwire>=2.0.0
 
